# fourdeers

./: AGENTS.md  Cargo.toml  Justfile  LICENSE  POLYTOPES_STATUS.md  README.md  STEREO_REFACTOR.md  architecture_review.md  audit.md  build.rs  build.sh  cleanup_plan.md  index.html  rust-toolchain.toml
.github/workflows/: ci.yml
.opencode/plans/: cleanup_plan.md  cleanup_plan2.md  gpu_rendering.md  multi_polytope_scene.md  performance_optimization.md  view_architecture_refactor.md  w_eye_panning.md
docs/: 4d_map_geometry.md  camera_rotation_model.md  visibility_cone_3d_plan.md
src/: app.rs  camera.rs  colors.rs  geometry.rs  input.rs  lib.rs  main.rs  map.rs  polytopes.rs  polytopes_data.rs  render.rs  rotation4d.rs  state.rs  test_utils.rs  tetrahedron.rs  ui.rs  wasm.rs
src/camera/: mod.rs  projection.rs  tests.rs
src/gpu/: callback.rs  mod.rs  pipeline.rs  vertex.rs
src/gpu/shaders/: wireframe.wgsl
src/input/: camera_controls.rs  mod.rs  overlay.rs  zone_debug.rs  zones.rs
src/map/: bounds.rs  helpers.rs  mod.rs  renderer.rs  slice.rs  transform.rs  view.rs  visibility.rs
src/render/: batch.rs  mod.rs  projection.rs  style.rs  tesseract.rs  tetra.rs  ui.rs
src/tetrahedron/: color.rs  format.rs  gadget.rs  geometry.rs  mod.rs  types.rs
src/toy/: manager.rs  mod.rs  registry.rs
src/toys/: debug_scratchpad.rs  mod.rs  polytopes.rs  scene_view.rs  tesseract.rs  tetrahedron_debug.rs
src/view/: compass_view.rs  mod.rs
tools/: generate_polytopes.py
